default/objects/Trigger_Logic_Control__mdt/Trigger_Logic_Control__mdt.object-meta.xml
<CustomObject>
    <description>Enabled and disabled apex trigger logic for objects that are supported.</description>
    <label>Trigger Logic Control</label>
    <pluralLabel>Trigger Logic Controls</pluralLabel>
</CustomObject>