default/objects/Trigger_Logic_Control__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this logic should be executed</description>
    <inlineHelpText>Whether this logic should be executed</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>