default/objects/Trigger_Logic_Control__mdt/fields/Logic_Name__c.field-meta.xml
<CustomField>
    <fullName>Logic_Name__c</fullName>
    <description>Identifier for a block of logic (e.g., SetDuplicateTransactionFlags). Must match exactly the name definition in the trigger handler.</description>
    <inlineHelpText>Identifier for a block of logic (e.g., SetDuplicateTransactionFlags). Must match exactly the name definition in the trigger handler.</inlineHelpText>
    <label>Logic Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>