default/objects/Trigger_Logic_Control__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any additional notes or information such as why a trigger is deactivated, etc.</description>
    <inlineHelpText>Any additional notes or information such as why a trigger is deactivated, etc.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>