default/objects/Trigger_Logic_Control__mdt/fields/Required_Input_Fields__c.field-meta.xml
<CustomField>
    <fullName>Required_Input_Fields__c</fullName>
    <description>a list of the fields on the sObjects to process that must be supplied to this trigger. This is used for the record reprocessor tool so that it may pre-select the needed fields on the records when attempting to run trigger logic.</description>
    <inlineHelpText>a list of the fields on the sObjects to process that must be supplied to this trigger. This is used for the record reprocessor tool so that it may pre-select the needed fields on the records when attempting to run trigger logic.</inlineHelpText>
    <label>Required Input Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>