default/objects/Trigger_Logic_Control__mdt/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <description>The type of sObject the trigger exists on. Must be one of the supported triggers that implement the control framework. These values may be updated as more triggers implement the framework</description>
    <inlineHelpText>The type of sObject the trigger exists on. Must be one of the supported triggers that implement the control framework. These values may be updated as more triggers implement the framework</inlineHelpText>
    <label>SObject Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank_Transaction_Group__c</fullName>
                <default>true</default>
                <label>Bank_Transaction_Group__c</label>
            </value>
            <value>
                <fullName>Bank_Transaction__c</fullName>
            </value>
            <value>
                <fullName>D2P_Vehicle__c</fullName>
            </value>
            <value>
                <fullName>Vehicle_Transaction__c</fullName>
            </value>
            <value>
                <fullName>Bank_Recon__c</fullName>
            </value>
            <value>
                <fullName>Fleet__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>