default/objects/Trigger_Logic_Control__mdt/fields/Trigger_Context__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Context__c</fullName>
    <description>The specific trigger phase that must match to run the trigger. Trigger logic control records that do not match the specified trigger phase in the trigger code will not run.</description>
    <inlineHelpText>The specific trigger phase that must match to run the trigger. Trigger logic control records that do not match the specified trigger phase in the trigger code will not run.</inlineHelpText>
    <label>Trigger Context</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>before_insert</fullName>
                <default>true</default>
                <label>before_insert</label>
            </value>
            <value>
                <fullName>before_update</fullName>
            </value>
            <value>
                <fullName>before_delete</fullName>
            </value>
            <value>
                <fullName>after_insert</fullName>
            </value>
            <value>
                <fullName>after_update</fullName>
            </value>
            <value>
                <fullName>after_delete</fullName>
            </value>
            <value>
                <fullName>after_undelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>