default/objects/Trigger_Logic_Control__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>SObject_Type__c</columns>
    <columns>Logic_Name__c</columns>
    <columns>DeveloperName</columns>
    <columns>Trigger_Context__c</columns>
    <columns>Is_Enabled__c</columns>
    <columns>Description__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>